Create API documentation to create sender
